[project]
name = "genlm-backend"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ben LeBrun" },
]
dependencies = [
    "torch",
    "transformers>=4.36.0",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "bitsandbytes; sys_platform == 'linux'",
    "numba",
    "vllm>=0.6.6,<=0.10.0; sys_platform == 'linux'",
    "triton>=3.2.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
mlx = [
    "mlx",
    "mlx-lm"
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools.packages.find]
include = ["genlm", "genlm/backend"]
exclude = ["benchmark*", "tests*"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
